--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   position: relative;
   width: 100%;
   height: 100vh;
-  background-image: url(bg1.png);
+  background-image: url(bg1.jpg);
   background-position: center;
   background-size: cover;
 }
